k3s/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels: { app: jellyfin, tier: media }
spec:
  replicas: 1
  selector:
    matchLabels: { app: jellyfin }
  template:
    metadata:
      labels: { app: jellyfin, tier: media }
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096       # HTTP
          volumeMounts:
            - { name: config, mountPath: /config }
            - { name: media,  mountPath: /media }
      volumes:
        - name: config
          hostPath: { path: /mnt/gluster/appdata/jellyfin }
        - name: media
          hostPath: { path: /mnt/gluster/media }
