k3s/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  labels: { app: jellyfin }
spec:
  type: ClusterIP
  ports:
    - port: 8096
      targetPort: 8096
  selector:
    app: jellyfin
