k3s/media/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints: [web]
  routes:
    - match: |
        Host(`jellyfin.rahl.cc`) ||
        Host(`jellyfin.fractal-financial.com`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
